Java compatibility